--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,63 +1,28 @@
-rabota_order:
-    resource: "@RabotaBundle/Controller/OrderController.php"
-    type:     annotation
-
-rabota_product:
-    resource: "@RabotaBundle/Controller/ProductController.php"
-    type:     annotation
-
-rabota_order:
-    resource: "@RabotaBundle/Controller/OrderController.php"
-    type:     annotation
-
-rabota_product:
-    resource: "@RabotaBundle/Controller/ProductController.php"
-    type:     annotation
-
-rabota_order:
-    resource: "@RabotaBundle/Controller/OrderController.php"
-    type:     annotation
-
-rabota_product:
-    resource: "@RabotaBundle/Controller/ProductController.php"
-    type:     annotation
-
-rabota_order:
-    resource: "@RabotaBundle/Controller/OrderController.php"
-    type:     annotation
-
-rabota_product:
-    resource: "@RabotaBundle/Controller/ProductController.php"
-    type:     annotation
-
-rabota_order:
-    resource: "@RabotaBundle/Controller/OrderController.php"
-    type:     annotation
-
-rabota_product:
-    resource: "@RabotaBundle/Controller/ProductController.php"
-    type:     annotation
-
-rabota_product:
-    resource: "@RabotaBundle/Controller/ProductController.php"
-    type:     annotation
-
-rabota_product:
-    resource: "@RabotaBundle/Controller/ProductController.php"
-    type:     annotation
-
-rabota_order:
-    resource: "@RabotaBundle/Controller/OrderController.php"
-    type:     annotation
-
-rabota_product:
-    resource: "@RabotaBundle/Controller/ProductController.php"
-    type:     annotation
-
 rabota:
     resource: "@RabotaBundle/Resources/config/routing.yml"
     prefix:   /
 
-app:
-    resource: '@AppBundle/Controller/'
-    type: annotation
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
+fos_user_profile:
+    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+    prefix: /profile
+
+fos_user_register:
+    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+    prefix: /register
+
+fos_user_resetting:
+    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+    prefix: /reset
+
+fos_user_change_password:
+    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+    prefix: /profile
+
+fos_user_registration_confirmed:
+    pattern: /registration/confirmed
+    defaults: { _controller: RabotaBundle:Default:getProductList }
+    requirements:
+        _method: GET
