--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,24 +1,36 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
+      encoders:
+          FOS\UserBundle\Model\UserInterface: bcrypt
 
-    # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
-    providers:
-        in_memory:
-            memory: ~
+      role_hierarchy:
+          ROLE_ADMIN:       ROLE_USER
+          ROLE_SUPER_ADMIN: ROLE_ADMIN
 
-    firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
+      providers:
+          fos_userbundle:
+              id: fos_user.user_provider.username
 
-        main:
-            anonymous: ~
-            # activate different ways to authenticate
+      firewalls:
+          main:
+              pattern: ^/
+              form_login:
+                  provider: fos_userbundle
+                  csrf_token_generator: security.csrf.token_manager
 
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
+              logout:       true
+              anonymous:    true
 
-            # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+          dev:
+                pattern: ^/(_(profiler|wdt)|css|images|vendor)/
+                security: false
+
+      access_control:
+              - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+              - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+              - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+              - { path: ^/admin/, role: ROLE_ADMIN }
+              - { path: ^/order-list, role: ROLE_USER }
+              - { path: ^/ajax/, role: ROLE_USER }
+
